Color Change + count and timer settings do something

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "DeltaScan"
-include ':app'
+include ':app'/*, ':DataCollectionLib'
+project(':DataCollectionLib').projectDir = new File('libs/DataCollectionLib')*/
